DO328/solutions/release-mesh/gateway-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gateway-dr
spec:
  host: gateway
  subsets:
  - name: v1
    labels:
      version: v1
  - labels:
      version: v2
    name: v2
