DO328/solutions/release-mesh/payment-vs-v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-vs
spec:
  hosts:
  - "*"
  gateways:
  - payment-api-gw
  http:
  - route:
    - destination:
        host: payment
        port:
          number: 8080
        subset: v1
      weight: 90
    - destination:
        host: payment
        port:
          number: 8080
        subset: v2
      weight: 10
